// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component have to match default button snapshot 1`] = `
<Button
  bounding="bounding"
  class="class"
  className="className"
  custom_element={Object {}}
  custom_method={[Function]}
  disabled="disabled"
  global_status_id="global_status_id"
  href={null}
  icon="question"
  icon_position="right"
  icon_size="icon_size"
  id="button"
  innerRef={Object {}}
  onClick={[Function]}
  on_click="on_click"
  size={null}
  skeleton="skeleton"
  status={null}
  status_animation="status_animation"
  status_state="status_state"
  text="text"
  title="This is a button title"
  tooltip={null}
  type="type"
  variant="primary"
  wrap="wrap"
>
  <button
    className="dnb-button dnb-button--primary dnb-button--has-text class className dnb-button--icon-position-right dnb-button--has-icon dnb-button--icon-size-icon_size dnb-button--wrap"
    disabled={false}
    id="button"
    onClick={[Function]}
    title="This is a button title"
    type="type"
  >
    <Content
      bounding="bounding"
      class="class"
      className="className"
      content="children"
      custom_element={Object {}}
      custom_method={[Function]}
      disabled="disabled"
      global_status_id="global_status_id"
      href={null}
      icon="question"
      icon_position="right"
      icon_size="icon_size"
      id="button"
      innerRef={Object {}}
      isIconOnly={false}
      onClick={[Function]}
      on_click="on_click"
      size={null}
      skeleton="skeleton"
      status={null}
      status_animation="status_animation"
      status_state="status_state"
      text="text"
      title="This is a button title"
      tooltip={null}
      type="type"
      variant="primary"
      wrap="wrap"
    >
      <span
        className="dnb-button__alignment"
        key="button-text-empty"
      >
        ‌
      </span>
      <span
        className="dnb-button__text"
        key="button-text"
      >
        children
      </span>
      <IconPrimary
        alt={null}
        aria-hidden={true}
        attributes={null}
        border={null}
        className="dnb-button__icon"
        color={null}
        height={null}
        icon="question"
        key="button-icon"
        modifier={null}
        size="icon_size"
        title={null}
        width={null}
      >
        <span
          aria-hidden={true}
          aria-label="question icon"
          className="dnb-icon dnb-icon--default dnb-button__icon"
          role="presentation"
        >
          <question>
            <svg
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                clipRule="evenodd"
                d="M4.352 5.1c0-2.05 1.55-3.6 3.6-3.6 2.052 0 3.601 1.55 3.601 3.6 0 2.051-1.55 3.6-3.6 3.6a.75.75 0 00-.75.75v2.666a.75.75 0 001.5 0V10.15c2.506-.348 4.35-2.425 4.35-5.049 0-2.879-2.22-5.1-5.1-5.1-2.88 0-5.1 2.221-5.1 5.1a.75.75 0 001.5 0zm3.6 10.898c.659 0 1.098-.439 1.098-1.097 0-.658-.44-1.097-1.097-1.097-.658 0-1.097.44-1.097 1.097 0 .658.439 1.097 1.097 1.097z"
                fill="#000"
                fillRule="evenodd"
              />
            </svg>
          </question>
        </span>
      </IconPrimary>
    </Content>
  </button>
</Button>
`;

exports[`Button component have to match href="..." snapshot 1`] = `
<Button
  bounding="bounding"
  class="class"
  className="className"
  custom_element={Object {}}
  custom_method={[Function]}
  disabled="disabled"
  global_status_id="global_status_id"
  href="https://url"
  icon="question"
  icon_position="right"
  icon_size="icon_size"
  id="button"
  innerRef={Object {}}
  onClick={[Function]}
  on_click="on_click"
  size={null}
  skeleton="skeleton"
  status={null}
  status_animation="status_animation"
  status_state="status_state"
  text="text"
  title="This is a button title"
  tooltip={null}
  type="type"
  variant="primary"
  wrap="wrap"
>
  <a
    className="dnb-button dnb-button--primary dnb-button--has-text class className dnb-button--icon-position-right dnb-button--has-icon dnb-button--icon-size-icon_size dnb-button--wrap"
    disabled={false}
    href="https://url"
    id="button"
    onClick={[Function]}
    title="This is a button title"
    type="type"
  >
    <Content
      bounding="bounding"
      class="class"
      className="className"
      content="children"
      custom_element={Object {}}
      custom_method={[Function]}
      disabled="disabled"
      global_status_id="global_status_id"
      href="https://url"
      icon="question"
      icon_position="right"
      icon_size="icon_size"
      id="button"
      innerRef={Object {}}
      isIconOnly={false}
      onClick={[Function]}
      on_click="on_click"
      size={null}
      skeleton="skeleton"
      status={null}
      status_animation="status_animation"
      status_state="status_state"
      text="text"
      title="This is a button title"
      tooltip={null}
      type="type"
      variant="primary"
      wrap="wrap"
    >
      <span
        className="dnb-button__alignment"
        key="button-text-empty"
      >
        ‌
      </span>
      <span
        className="dnb-button__text"
        key="button-text"
      >
        children
      </span>
      <IconPrimary
        alt={null}
        aria-hidden={true}
        attributes={null}
        border={null}
        className="dnb-button__icon"
        color={null}
        height={null}
        icon="question"
        key="button-icon"
        modifier={null}
        size="icon_size"
        title={null}
        width={null}
      >
        <span
          aria-hidden={true}
          aria-label="question icon"
          className="dnb-icon dnb-icon--default dnb-button__icon"
          role="presentation"
        >
          <question>
            <svg
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                clipRule="evenodd"
                d="M4.352 5.1c0-2.05 1.55-3.6 3.6-3.6 2.052 0 3.601 1.55 3.601 3.6 0 2.051-1.55 3.6-3.6 3.6a.75.75 0 00-.75.75v2.666a.75.75 0 001.5 0V10.15c2.506-.348 4.35-2.425 4.35-5.049 0-2.879-2.22-5.1-5.1-5.1-2.88 0-5.1 2.221-5.1 5.1a.75.75 0 001.5 0zm3.6 10.898c.659 0 1.098-.439 1.098-1.097 0-.658-.44-1.097-1.097-1.097-.658 0-1.097.44-1.097 1.097 0 .658.439 1.097 1.097 1.097z"
                fill="#000"
                fillRule="evenodd"
              />
            </svg>
          </question>
        </span>
      </IconPrimary>
    </Content>
  </a>
</Button>
`;

exports[`Button scss have to match default theme snapshot 1`] = `
"/*
* Button theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
* Button mixins
*
*/
.dnb-button {
  border: none;
  box-shadow: none;
  text-align: left; }
  .dnb-button--primary {
    color: var(--color-white);
    background-color: var(--color-sea-green); }
    html:not([data-whatintent='touch']) .dnb-button--primary:hover[disabled] {
      cursor: not-allowed; }
    html:not([data-whatintent='touch']) .dnb-button--primary:hover:not([disabled]) {
      color: var(--color-sea-green);
      background-color: var(--color-white);
      box-shadow: 0 0 0 0.125rem var(--color-emerald-green);
      /* IE11 fix */
      border-color: transparent; }
      @media screen and (-ms-high-contrast: none) {
        html:not([data-whatintent='touch']) .dnb-button--primary:hover:not([disabled]) {
          opacity: 1; } }
    .dnb-button--primary:focus[disabled],
    html:not([data-whatintent='touch']) .dnb-button--primary:focus[disabled] {
      cursor: not-allowed; }
    .dnb-button--primary:focus:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-button--primary:focus:not([disabled]) {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-button--primary:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-button--primary:focus:not([disabled]) {
        color: var(--color-sea-green);
        background-color: var(--color-white); }
      html[data-whatinput='keyboard'] .dnb-button--primary:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-button--primary:focus:not([disabled]) {
        box-shadow: inset 0 0 0 0.125rem var(--color-emerald-green);
        /* IE11 fix */
        /* iOS fix - because \\"inset\\" works not fine with border-radius and rem unit */
        border-color: transparent; }
        @supports (-webkit-touch-callout: none) {
          html[data-whatinput='keyboard'] .dnb-button--primary:focus:not([disabled]), html[data-whatinput='keyboard']
          html:not([data-whatintent='touch']) .dnb-button--primary:focus:not([disabled]) {
            box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }
    .dnb-button--primary:active[disabled],
    html:not([data-whatintent='touch']) .dnb-button--primary:active[disabled] {
      cursor: not-allowed; }
    .dnb-button--primary:active:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-button--primary:active:not([disabled]) {
      color: var(--color-sea-green);
      background-color: var(--color-mint-green-50);
      box-shadow: 0 0 0 0.0625rem transparent;
      /* IE11 fix */
      border-color: transparent; }
    .dnb-button--primary[disabled] {
      color: var(--color-white);
      background-color: var(--color-sea-green-30); }
  .dnb-button--secondary {
    color: var(--color-sea-green);
    background-color: var(--color-white);
    box-shadow: inset 0 0 0 0.0625rem var(--color-sea-green);
    /* IE11 fix */
    /* iOS fix - because \\"inset\\" works not fine with border-radius and rem unit */
    border-color: transparent; }
    .dnb-button--secondary:not([disabled]) .dnb-button__icon {
      color: var(--color-emerald-green); }
    @media screen and (-ms-high-contrast: none) {
      .dnb-button--secondary {
        box-shadow: inset 0 0 0 1px var(--color-sea-green); } }
    @supports (-webkit-touch-callout: none) {
      .dnb-button--secondary {
        box-shadow: 0 0 0 0.0625rem var(--color-sea-green); } }
    html:not([data-whatintent='touch']) .dnb-button--secondary:hover[disabled] {
      cursor: not-allowed; }
    html:not([data-whatintent='touch']) .dnb-button--secondary:hover:not([disabled]) {
      color: var(--color-sea-green);
      background-color: var(--color-white);
      box-shadow: 0 0 0 0.125rem var(--color-emerald-green);
      /* IE11 fix */
      border-color: transparent; }
      @media screen and (-ms-high-contrast: none) {
        html:not([data-whatintent='touch']) .dnb-button--secondary:hover:not([disabled]) {
          opacity: 1; } }
    .dnb-button--secondary:focus[disabled],
    html:not([data-whatintent='touch']) .dnb-button--secondary:focus[disabled] {
      cursor: not-allowed; }
    .dnb-button--secondary:focus:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-button--secondary:focus:not([disabled]) {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-button--secondary:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-button--secondary:focus:not([disabled]) {
        color: var(--color-sea-green);
        background-color: var(--color-white); }
      html[data-whatinput='keyboard'] .dnb-button--secondary:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-button--secondary:focus:not([disabled]) {
        box-shadow: inset 0 0 0 0.125rem var(--color-emerald-green);
        /* IE11 fix */
        /* iOS fix - because \\"inset\\" works not fine with border-radius and rem unit */
        border-color: transparent; }
        @supports (-webkit-touch-callout: none) {
          html[data-whatinput='keyboard'] .dnb-button--secondary:focus:not([disabled]), html[data-whatinput='keyboard']
          html:not([data-whatintent='touch']) .dnb-button--secondary:focus:not([disabled]) {
            box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }
    .dnb-button--secondary:active[disabled],
    html:not([data-whatintent='touch']) .dnb-button--secondary:active[disabled] {
      cursor: not-allowed; }
    .dnb-button--secondary:active:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-button--secondary:active:not([disabled]) {
      color: var(--color-sea-green);
      background-color: var(--color-mint-green-50);
      box-shadow: 0 0 0 0.0625rem transparent;
      /* IE11 fix */
      border-color: transparent; }
    .dnb-button--secondary[disabled], .dnb-button--secondary[disabled]:focus {
      color: var(--color-sea-green-30);
      background-color: var(--color-white);
      box-shadow: inset 0 0 0 0.0625rem var(--color-sea-green-30);
      /* IE11 fix */
      /* iOS fix - because \\"inset\\" works not fine with border-radius and rem unit */
      border-color: transparent; }
      @media screen and (-ms-high-contrast: none) {
        .dnb-button--secondary[disabled], .dnb-button--secondary[disabled]:focus {
          box-shadow: inset 0 0 0 1px var(--color-sea-green-30); } }
      @supports (-webkit-touch-callout: none) {
        .dnb-button--secondary[disabled], .dnb-button--secondary[disabled]:focus {
          box-shadow: 0 0 0 0.0625rem var(--color-sea-green-30); } }
  .dnb-button:not([disabled]).dnb-button--secondary.dnb-button__status--error {
    color: var(--color-fire-red);
    box-shadow: inset 0 0 0 0.0625rem var(--color-fire-red);
    /* IE11 fix */
    /* iOS fix - because \\"inset\\" works not fine with border-radius and rem unit */
    border-color: transparent; }
    @media screen and (-ms-high-contrast: none) {
      .dnb-button:not([disabled]).dnb-button--secondary.dnb-button__status--error {
        box-shadow: inset 0 0 0 1px var(--color-fire-red); } }
    @supports (-webkit-touch-callout: none) {
      .dnb-button:not([disabled]).dnb-button--secondary.dnb-button__status--error {
        box-shadow: 0 0 0 0.0625rem var(--color-fire-red); } }
    .dnb-button:not([disabled]).dnb-button--secondary.dnb-button__status--error .dnb-button__icon {
      color: inherit; }
  .dnb-button--active {
    box-shadow: 0 0 0 0.125rem var(--color-emerald-green);
    /* IE11 fix */
    border-color: transparent; }
  .dnb-button--tertiary {
    position: relative;
    color: var(--color-sea-green);
    background-color: transparent; }
    .dnb-button--tertiary .dnb-button__text {
      position: relative; }
      .dnb-button--tertiary .dnb-button__text::after {
        content: '';
        position: absolute;
        z-index: 1;
        left: 0;
        right: 0;
        bottom: 0;
        width: auto;
        height: 0.095rem;
        border-radius: calc(0.095rem / 2);
        color: var(--color-sea-green);
        background-color: currentColor;
        bottom: -0.0625rem;
        color: transparent;
        opacity: 0;
        transition: opacity 200ms ease-out, color 200ms ease-out; }
        @media screen and (-ms-high-contrast: none) {
          .dnb-button--tertiary .dnb-button__text::after {
            height: 1px;
            border-radius: 0.5px; } }
        [data-dnb-test-wrapper] .dnb-button--tertiary .dnb-button__text::after {
          transition: none; }
    .dnb-button--tertiary.dnb-button--has-text {
      padding-left: 0.5rem;
      padding-right: 0.5rem; }
    .dnb-button--tertiary.dnb-button--has-icon .dnb-button__text::after {
      left: -0.5rem;
      right: -0.5rem; }
    .dnb-button--tertiary:focus[disabled],
    html:not([data-whatintent='touch']) .dnb-button--tertiary:focus[disabled] {
      cursor: not-allowed; }
    .dnb-button--tertiary:focus:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-button--tertiary:focus:not([disabled]) {
      outline: initial; }
      html[data-whatinput='keyboard'] .dnb-button--tertiary:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-button--tertiary:focus:not([disabled]) {
        box-shadow: none; }
      .dnb-button--tertiary:focus:not([disabled])::before,
      html:not([data-whatintent='touch']) .dnb-button--tertiary:focus:not([disabled])::before {
        content: '';
        position: absolute;
        z-index: 1;
        top: 0;
        left: -0.5rem;
        bottom: 0;
        right: -0.5rem;
        height: inherit;
        border-radius: inherit;
        outline: none; }
        html[data-whatinput='keyboard'] .dnb-button--tertiary:focus:not([disabled])::before, html[data-whatinput='keyboard']
        html:not([data-whatintent='touch']) .dnb-button--tertiary:focus:not([disabled])::before {
          box-shadow: 0 0 0 0.125rem var(--color-emerald-green);
          /* IE11 fix */
          border-color: transparent; }
      .dnb-button--tertiary:focus:not([disabled]) .dnb-button__text::after,
      html:not([data-whatintent='touch']) .dnb-button--tertiary:focus:not([disabled]) .dnb-button__text::after {
        visibility: hidden; }
    html:not([data-whatintent='touch']) .dnb-button--tertiary:hover[disabled] {
      cursor: not-allowed; }
    html:not([data-whatintent='touch']) .dnb-button--tertiary:hover:not([disabled]) .dnb-button__text::after {
      visibility: visible;
      opacity: 1;
      color: var(--color-emerald-green); }
    .dnb-button--tertiary:active[disabled],
    html:not([data-whatintent='touch']) .dnb-button--tertiary:active[disabled] {
      cursor: not-allowed; }
    .dnb-button--tertiary:active:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-button--tertiary:active:not([disabled]) {
      outline: initial; }
      html[data-whatinput='keyboard'] .dnb-button--tertiary:active:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-button--tertiary:active:not([disabled]) {
        box-shadow: none; }
      html[data-whatintent='touch'] .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after, html[data-whatintent='touch']
      html:not([data-whatintent='touch']) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after {
        transition: none;
        visibility: visible;
        opacity: 1;
        color: var(--color-emerald-green); }
      html:not([data-whatintent='touch']) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after, html:not([data-whatintent='touch'])
      html:not([data-whatintent='touch']) .dnb-button--tertiary:active:not([disabled]) .dnb-button__text::after {
        visibility: hidden; }
    .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left {
      padding-left: 0;
      padding-right: 0.5rem; }
      .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left .dnb-button__text {
        padding-left: 1rem; }
        .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left .dnb-button__text::after {
          right: 0; }
      .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left .dnb-button__icon {
        margin-right: -0.5rem; }
      .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left.dnb-button--icon-size-medium .dnb-button__text, .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left.dnb-button--icon-size-large .dnb-button__text {
        padding-left: 0;
        margin-left: 1rem; }
        .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left.dnb-button--icon-size-medium .dnb-button__text::after, .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-left.dnb-button--icon-size-large .dnb-button__text::after {
          left: 0; }
    .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right {
      padding-right: 0;
      padding-left: 0.5rem;
      /* stylelint-disable */
      /* stylelint-enable */ }
      .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right .dnb-button__text {
        padding-right: 1rem; }
        .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right .dnb-button__text::after {
          left: 0; }
      .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right .dnb-button__icon {
        margin-left: -0.5rem; }
      .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right.dnb-button--icon-size-medium .dnb-button__text, .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right.dnb-button--icon-size-large .dnb-button__text {
        padding-right: 0;
        margin-right: 1rem; }
        .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right.dnb-button--icon-size-medium .dnb-button__text::after, .dnb-button--tertiary.dnb-button--has-icon.dnb-button--has-text.dnb-button--icon-position-right.dnb-button--icon-size-large .dnb-button__text::after {
          right: 0; }
    .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):focus[disabled],
    html:not([data-whatintent='touch']) .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):focus[disabled] {
      cursor: not-allowed; }
    .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):focus:not([disabled])::before,
    html:not([data-whatintent='touch']) .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):focus:not([disabled])::before {
      left: 0;
      right: 0; }
    html:not([data-whatintent='touch']) .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):hover[disabled] {
      cursor: not-allowed; }
    html:not([data-whatintent='touch']) .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):hover:not([disabled]) {
      box-shadow: 0 0 0 0.0625rem var(--color-sea-green);
      /* IE11 fix */
      border-color: transparent; }
    .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):active[disabled],
    html:not([data-whatintent='touch']) .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):active[disabled] {
      cursor: not-allowed; }
    .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):active:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-button--tertiary.dnb-button--has-icon:not(.dnb-button--has-text):active:not([disabled]) {
      box-shadow: 0 0 0 0.0625rem var(--color-sea-green-30);
      /* IE11 fix */
      border-color: transparent; }
    html[data-whatinput='keyboard']
.dnb-button--tertiary:hover:focus .dnb-button__text::after {
      visibility: hidden; }
    .dnb-button--tertiary[disabled] {
      color: var(--color-sea-green-30); }
  .dnb-button--signal {
    color: var(--color-ocean-green);
    background-color: var(--color-accent-yellow); }
    html:not([data-whatintent='touch']) .dnb-button--signal:hover[disabled] {
      cursor: not-allowed; }
    html:not([data-whatintent='touch']) .dnb-button--signal:hover:not([disabled]) {
      color: var(--color-ocean-green);
      background-color: var(--color-accent-yellow);
      box-shadow: 0 0 0 0.125rem var(--color-emerald-green);
      /* IE11 fix */
      border-color: transparent; }
      @media screen and (-ms-high-contrast: none) {
        html:not([data-whatintent='touch']) .dnb-button--signal:hover:not([disabled]) {
          opacity: 1; } }
    html[data-whatintent='touch'] .dnb-button--signal:active[disabled],
    html:not([data-whatintent='touch']) html[data-whatintent='touch'] .dnb-button--signal:active[disabled] {
      cursor: not-allowed; }
    html[data-whatintent='touch'] .dnb-button--signal:active:not([disabled]),
    html:not([data-whatintent='touch']) html[data-whatintent='touch'] .dnb-button--signal:active:not([disabled]) {
      color: var(--color-ocean-green);
      background-color: var(--color-accent-yellow);
      box-shadow: 0 0 0 0.125rem var(--color-emerald-green);
      /* IE11 fix */
      border-color: transparent; }
    .dnb-button--signal:focus[disabled],
    html:not([data-whatintent='touch']) .dnb-button--signal:focus[disabled] {
      cursor: not-allowed; }
    .dnb-button--signal:focus:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-button--signal:focus:not([disabled]) {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-button--signal:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-button--signal:focus:not([disabled]) {
        color: var(--color-ocean-green);
        background-color: var(--color-accent-yellow); }
      html[data-whatinput='keyboard'] .dnb-button--signal:focus:not([disabled]), html[data-whatinput='keyboard']
      html:not([data-whatintent='touch']) .dnb-button--signal:focus:not([disabled]) {
        box-shadow: inset 0 0 0 0.125rem var(--color-emerald-green);
        /* IE11 fix */
        /* iOS fix - because \\"inset\\" works not fine with border-radius and rem unit */
        border-color: transparent; }
        @supports (-webkit-touch-callout: none) {
          html[data-whatinput='keyboard'] .dnb-button--signal:focus:not([disabled]), html[data-whatinput='keyboard']
          html:not([data-whatintent='touch']) .dnb-button--signal:focus:not([disabled]) {
            box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }
    .dnb-button--signal:active[disabled],
    html:not([data-whatintent='touch']) .dnb-button--signal:active[disabled] {
      cursor: not-allowed; }
    .dnb-button--signal:active:not([disabled]),
    html:not([data-whatintent='touch']) .dnb-button--signal:active:not([disabled]) {
      color: var(--color-ocean-green);
      background-color: var(--color-accent-yellow);
      box-shadow: 0 0 0 0.0625rem transparent;
      /* IE11 fix */
      border-color: transparent; }
    .dnb-button--signal[disabled] {
      color: var(--color-black-30);
      background-color: var(--color-accent-yellow-30); }
"
`;

exports[`Button scss have to match snapshot 1`] = `
"/*
* DNB Button
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
/*
* DNB icon
*
*/
/*
* Icon component
*
*/
.dnb-icon {
  display: inline-block;
  vertical-align: middle;
  font-size: 1rem;
  line-height: 1rem;
  color: inherit;
  width: 1em;
  height: 1em; }
  .dnb-icon img,
  .dnb-icon svg {
    width: inherit;
    height: inherit;
    shape-rendering: geometricPrecision;
    vertical-align: top; }
  .dnb-icon svg[width='100%'] {
    width: inherit; }
  .dnb-icon svg[height='100%'] {
    height: inherit; }
  .dnb-icon svg:not([fill]),
  .dnb-icon svg [fill] {
    fill: currentColor; }
  .dnb-icon svg [stroke] {
    stroke: currentColor; }
  .dnb-icon--small {
    font-size: 0.75rem; }
  .dnb-icon--default {
    font-size: 1rem; }
  .dnb-icon--medium {
    font-size: 1.5rem; }
  .dnb-icon--large {
    font-size: 2rem; }
  .dnb-icon--x-large {
    font-size: 2.5rem; }
  .dnb-icon--xx-large {
    font-size: 3rem; }
  .dnb-icon--custom-size {
    width: auto;
    height: auto; }
  .dnb-icon--auto {
    font-size: 1em; }
  .dnb-icon--auto > .dnb-icon--wrapper {
    display: inline-flex;
    align-items: center;
    justify-content: center; }
  h1 .dnb-icon,
  h2 .dnb-icon,
  h3 .dnb-icon,
  h4 .dnb-icon,
  h5 .dnb-icon,
  h6 .dnb-icon {
    vertical-align: middle; }
  @media screen and (-ms-high-contrast: none) {
    .dnb-icon {
      flex: none; } }

/*
* DNB FormStatus
*
*/
.dnb-form-status {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-default);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-form-status *,
  .dnb-form-status ::before,
  .dnb-form-status ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-form-status ::before,
  .dnb-form-status ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
 * FormStatus component
 *
 */
.dnb-form-status {
  display: flex; }
  .dnb-form-status__shell {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    border-radius: var(--input-border-radius); }
  .dnb-form-status--text {
    padding: calc(0.5rem / 2) 1rem;
    cursor: text;
    color: inherit;
    line-height: var(--line-height-basis);
    white-space: normal; }
    .dnb-form-status--text .dnb-anchor {
      font-size: inherit; }
  .dnb-icon + .dnb-form-status--text {
    padding-left: 0.5rem; }
  .dnb-form-status__shell > .dnb-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 1.5em;
    height: 1.5em;
    margin-top: 0.25em;
    margin-left: 0.5em;
    color: inherit;
    font-size: var(--font-size-small); }
  .dnb-form-status[hidden] {
    display: none; }
  .dnb-form-status--fade-in {
    overflow: hidden;
    max-height: 0;
    animation: form-status-fade-in 2s ease-out 400ms forwards; }

@keyframes form-status-fade-in {
  from {
    max-height: 0; }
  to {
    max-height: calc(var(--input-height) * 8); } }
  @media screen and (-ms-high-contrast: none) {
    .dnb-form-status__shell > .dnb-icon {
      border-width: 1px; } }

.dnb-button {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-default);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-button *,
  .dnb-button ::before,
  .dnb-button ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-button ::before,
  .dnb-button ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
* Button component
*
*/
:root {
  --button-font-size: var(--font-size-basis);
  --button-font-size-small: var(--font-size-small);
  --button-width: 2.5rem;
  --button-height: 2.5rem;
  --button-width--small: 1.5rem;
  --button-height--small: 1.5rem;
  --button-width--medium: 2rem;
  --button-height--medium: 2rem;
  --button-width--large: 3rem;
  --button-height--large: 3rem;
  --button-icon-size: 1rem;
  --button-border-width: 0.0625rem;
  --button-border-width--hover: 0.1875rem;
  --button-border-radius: calc(var(--button-height) / 2);
  --button-border-radius--small: calc(var(--button-height--small) / 2);
  --button-border-radius--medium: calc(var(--button-height--medium) / 2);
  --button-border-radius--large: calc(var(--button-height--large) / 2); }

.dnb-button {
  position: relative;
  user-select: none;
  -webkit-user-select: none;
  cursor: pointer;
  white-space: nowrap;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: var(--button-width);
  height: auto;
  padding: 0;
  border: var(--button-border-width) solid transparent;
  border-radius: var(--button-border-radius);
  text-decoration: none;
  font-size: var(--font-size-small);
  /* stylelint-disable-next-line */ }
  .dnb-button--wrap {
    overflow-wrap: break-word;
    white-space: normal; }
  .dnb-button,
  .dnb-core-style .dnb-button {
    line-height: var(--button-height); }
  .dnb-button__text {
    margin: 0.5rem 0;
    font-size: var(--button-font-size);
    line-height: var(--line-height-basis);
    color: inherit;
    transform: translateY(-0.03125rem); }
    .dnb-button__text [data-os='linux'] {
      transform: translateY(-0.035rem); }
  .dnb-button__alignment {
    display: inline-block;
    width: 0; }
  .dnb-button__bounding {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    transform: scale(1.1, 1.4);
    background-color: transparent;
    border-radius: var(--button-border-radius); }
  .dnb-button--has-text {
    padding-left: 1.5rem;
    padding-right: 1.5rem; }
  .dnb-button--size-small {
    width: var(--button-width--small);
    font-size: var(--button-font-size-small);
    border-radius: var(--button-border-radius--small); }
    .dnb-button--size-small,
    .dnb-core-style .dnb-button--size-small {
      line-height: var(--button-height--small); }
  .dnb-button--size-small .dnb-button__text {
    margin: 0; }
  .dnb-button--has-text.dnb-button--size-small {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-small {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-small {
    padding-right: 0.5rem; }
  .dnb-button--size-medium {
    width: var(--button-width--medium);
    border-radius: var(--button-border-radius--medium); }
    .dnb-button--size-medium,
    .dnb-core-style .dnb-button--size-medium {
      line-height: var(--button-height--medium); }
  .dnb-button--size-medium .dnb-button__text {
    margin: 0; }
  .dnb-button--has-text.dnb-button--size-medium {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-medium {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-medium {
    padding-right: 0.5rem; }
  .dnb-button--size-large {
    width: var(--button-width--large);
    border-radius: var(--button-border-radius--large); }
    .dnb-button--size-large,
    .dnb-core-style .dnb-button--size-large {
      line-height: var(--button-height--large); }
  .dnb-button--has-text.dnb-button--size-large {
    padding-left: 2rem;
    padding-right: 2rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-large {
    padding-left: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-large {
    padding-right: 1rem; }
  .dnb-button--has-text {
    width: auto; }
  .dnb-button--has-text .dnb-button__icon {
    margin: 0 calc(var(--button-icon-size) / 2); }
  .dnb-button--has-text.dnb-button--icon-position-left {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right {
    padding-right: 0.5rem; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__icon {
    order: 2; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__text {
    order: 1; }
  .dnb-button:not(.dnb-button--has-text) .dnb-button__icon {
    width: inherit; }
  .dnb-button__icon.dnb-icon svg:not([width]):not([height]) {
    width: var(--button-icon-size);
    height: var(--button-icon-size); }
  [href] > .dnb-button__icon.dnb-icon {
    line-height: var(--button-font-size); }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__icon {
    order: 1; }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__text {
    order: 2; }
  .dnb-button--reset {
    margin: 0;
    padding: 0;
    width: auto;
    height: auto;
    overflow: visible;
    border: none;
    border-radius: 0;
    background-color: transparent;
    appearance: none;
    box-shadow: none;
    color: inherit;
    font: inherit;
    text-align: inherit;
    line-height: inherit; }
    html:not([data-whatintent='touch']) .dnb-button--reset:hover[disabled] {
      cursor: not-allowed; }
    html:not([data-whatintent='touch']) .dnb-button--reset:hover:not([disabled]) {
      box-shadow: none;
      border: none; }
    .dnb-button--reset:not([disabled]):focus, .dnb-button--reset:not([disabled]):active {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):focus, html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):active {
        box-shadow: 0 0 0 0.125rem var(--color-emerald-green);
        /* IE11 fix */
        border-color: transparent; }
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):focus,
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):active {
      box-shadow: none;
      color: inherit;
      border: none; }
  .dnb-button[type='button'], .dnb-button[type='reset'], .dnb-button[type='submit'] {
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none; }
  .dnb-button[disabled] {
    cursor: not-allowed; }
  .dnb-form-row--vertical .dnb-form-row__content > .dnb-button {
    align-self: flex-start; }
  .dnb-form-row--horizontal .dnb-form-row__content .dnb-button__text {
    white-space: nowrap; }
  .dnb-button + .dnb-form-status {
    margin-top: 0.5rem; }
  @media screen and (-ms-high-contrast: none) {
    .dnb-button {
      flex: none; }
      .dnb-button__icon, .dnb-button__text {
        transform: translateY(-0.0625rem); } }

/* Firefox includes a hidden border which messes up button dimensions */
button.dnb-button::-moz-focus-inner {
  border: none; }
"
`;
